--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -3,3 +3,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  @apply bg-black-900;
+}
+
+/* Add a thumb */
+*::-webkit-scrollbar-thumb {
+  @apply bg-gradient-to-r from-green-400 via-green-500  to-green-600 rounded-full;
+}
